[package]
name = "iterify"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/BRA1L0R/iterify-rs"
description = "Turn any type into an iterator with closures!"
license-file = "LICENSE.md"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
